@@ -4,7 +4,7 @@ running configure, to aid debugging if configure makes a mistake.
 It was created by libatomic_ops configure 1.2, which was
 generated by GNU Autoconf 2.63.  Invocation command line was
 
-  $ ./configure --disable-option-checking --prefix=/usr/local --with-mysql=/usr/lib/libmysqlclient.15.so --cache-file=/dev/null --srcdir=.
+  $ ./configure --disable-option-checking --prefix=/usr/local --cache-file=/dev/null --srcdir=.
 
 ## --------- ##
 ## Platform. ##
@@ -30,8 +30,8 @@ Kernel configured for up to 2 processors.
 Processor type: i486 (Intel 80486)
 Processors active: 0 1
 Primary memory available: 2.00 gigabytes
-Default processor set: 130 tasks, 375 threads, 2 processors
-Load average: 1.54, Mach factor: 0.52
+Default processor set: 130 tasks, 374 threads, 2 processors
+Load average: 1.83, Mach factor: 0.43
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
